--- a/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen-images.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen-images.scss
@@ -113,13 +113,10 @@
 	#gcwu-psnb {
 		.mb-menu {
 			.expandicon {
+				padding-left: 0.79em;
 				padding-right: 0;
 				background-position: left center;
 			}
-		}
-
-		.mb-has-sm {
-			padding-left: 0;
 		}
 	}
 }
