--- a/src/theme-wet-boew/sass/includes/_default-mobile.scss
+++ b/src/theme-wet-boew/sass/includes/_default-mobile.scss
@@ -431,7 +431,7 @@ img{
 		a {
 			padding-left: 55px;
 			&.ui-btn-icon-left {
-				padding-left: 0px;
+				padding-left: 0;
 			}
 		}
 		.wb-nested-menu {
